--- a/app/templates/layout.njk
+++ b/app/templates/layout.njk
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="assets/css/spectre.min.css">
 </head>
 <body>
   {% include "partials/header.njk" %}
@@ -14,9 +14,9 @@
   <article class="content">
     {% block content %}
     {% endblock %}
-  </article>  
+  </article>
 
   {% include "partials/footer.njk" %}
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/script.min.js"></script>
 </body>
 </html>
