added basic nunjucks workflow structure

--- a/app/templates/partials/footer.njk
+++ b/app/templates/partials/footer.njk
@@ -1,4 +1,5 @@
 <!-- footer.njk -->
-<footer class="page-footer">
-  Footer goes here test test eins
-</footer>
+<div class="docs-footer container grid-lg" id="copyright">
+  <p><a href="https://github.com/gasseklopper/spectre" target="_blank">GitHub</a> Version <span class="version"></span></p>
+  <p>Designed and built with <span class="text-error">&hearts;</span> by <a href="https://www.markusmorley.de" target="_blank">Markus Morley</a>. Licensed under the <a href="https://github.com/gasseklopper/" target="_blank">MIT License</a>.</p>
+</div>
