--- a/app/templates/macros/navigation-macro.njk
+++ b/app/templates/macros/navigation-macro.njk
@@ -1,4 +1,5 @@
 {% macro active(activePage='home') %} <!-- defaults to home -->
-  <a href="#" class="nav-item {%if activePage == 'home' %}active{% endif %}">test</a>
+  <a href="./" class="nav-item {%if activePage == 'home' %}active{% endif %}">test</a>
+  <a href="./hero.html" class="nav-item {%if activePage == 'hero' %}active{% endif %}">Hero</a>
   <a href="#" class="nav-item {%if activePage == 'about' %}active{% endif %}">About</a>
 {% endmacro %}
