--- a/app/templates/partials/navigation.njk
+++ b/app/templates/partials/navigation.njk
@@ -1,5 +1,5 @@
 <!-- navigation.njk -->
 <nav class="navigation">
   {% import 'macros/navigation-macro.njk' as nav %}
-  {{nav.active('home')}}
+  {{nav.active('hero')}}
 </nav>
