--- a/app/components/pages/hero/hero.njk
+++ b/app/components/pages/hero/hero.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
+{{animals[1].type}}
 <div class="docs-container off-canvas off-canvas-sidebar-show">
       <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-menu"></i></a>
         <div class="btns d-flex">
