do it the static way

--- a/app/components/pages/layout.njk
+++ b/app/components/pages/layout.njk
@@ -9,15 +9,16 @@
   <link rel="stylesheet" href="../../assets/css/spectre-exp.min.css">
 </head>
 <body>
-  {# {% include "partials/header/header.njk" %}
-  {% include "partials/navigation/navigation.njk" %} #}
+  {% include "partials/header/header.njk" %}
+  {% include "partials/navigation/navigation.njk" %}
 
 
     {% block content %}
     {% endblock %}
 
 
-  {# {% include "partials/footer/footer.njk" %} #}
+  {% include "partials/footer/footer.njk" %}
   <script src="../../../assets/js/script.min.js"></script>
+  <script src="../../../assets/js/libs/anime.js"></script>
 </body>
 </html>
