--- a/assets/scss/spectre.scss
+++ b/assets/scss/spectre.scss
@@ -50,8 +50,33 @@ a {
 // Utility classes
 @import "animations";
 @import "utilities";
+.stagger{
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #FF4B4B;
+}
+.stagger-visualizer {
+	  // background-color: #FF4B4B;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 17rem;
+  height: 17rem;
+}
 
-
+.stagger-visualizer div {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid #fff;
+  background-color: #fff;
+}
 
 .off-canvas {
   .off-canvas-toggle {
