added css work flow and reworked gulp workflow

--- a/assets/scss/2-base/_base.scss
+++ b/assets/scss/2-base/_base.scss
@@ -14,6 +14,7 @@ html {
 
 body {
   background: $body-bg;
+  // background-color: black !important;
   color: $body-font-color;
   font-family: $body-font-family;
   font-size: $font-size;
