--- a/assets/scss/spectre-exp.scss
+++ b/assets/scss/spectre-exp.scss
@@ -1,6 +1,6 @@
 // Variables and mixins
 @import "variables";
-@import "mixins";
+@import "1-helpers/1-helpers";
 
 /*! Spectre.css Experimentals v#{$version} | MIT License | github.com/picturepan2/spectre */
 // Experimentals
