--- a/app/templates/layout.njk
+++ b/app/templates/layout.njk
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="../../assets/css/spectre.min.css">
-  <link rel="stylesheet" href="../../assets/css/spectre-exp.min.css">
+  <link rel="stylesheet" href="assets/css/spectre.min.css">
+  <link rel="stylesheet" href="assets/css/spectre-exp.min.css">
 </head>
 <body>
   {# {% include "partials/header/header.njk" %}
