--- a/assets/scss/2-base/_2-base.scss
+++ b/assets/scss/2-base/_2-base.scss
@@ -1,3 +1,16 @@
-// Mixins
+// base
 @import "base";
+
+// normalize
 @import "normalize";
+
+// Elements
+@import "grid_layout";
+@import "typography";
+@import "asian";
+@import "tables";
+@import "buttons";
+@import "forms";
+@import "labels";
+@import "codes";
+@import "media";
