--- a/assets/scss/spectre-icons.scss
+++ b/assets/scss/spectre-icons.scss
@@ -1,10 +1,7 @@
 // Variables and mixins
-@import "variables";
 @import "1-helpers/1-helpers";
 
 /*! Spectre.css Icons v#{$version} | MIT License | github.com/picturepan2/spectre */
 // Icons
-@import "icons/icons-core";
-@import "icons/icons-navigation";
-@import "icons/icons-action";
-@import "icons/icons-object";
+// Helpers Variables and mixins
+@import "9-icons/9-icons";
