--- a/app/templates/layout.njk
+++ b/app/templates/layout.njk
@@ -5,8 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/css/spectre.min.css">
-  <link rel="stylesheet" href="assets/css/spectre-exp.min.css">
+  <link rel="stylesheet" href="src/assets/css/spectre.min.css">
+  <link rel="stylesheet" href="src/assets/css/spectre-exp.min.css">
 </head>
 <body>
   {# {% include "partials/header/header.njk" %}
@@ -196,10 +196,7 @@
 </div>
 
 
-
-
-
-  <script src="../../../assets/js/script.min.js"></script>
-  <script src="../../../assets/js/libs/anime.js"></script>
+  <script src="../../../src/assets/js/script.min.js"></script>
+  <script src="../../../src/assets/js/libs/anime.js"></script>
 </body>
 </html>
