updated colums to row

--- a/src/assets/scss/2-base/_grid_layout.scss
+++ b/src/assets/scss/2-base/_grid_layout.scss
@@ -29,6 +29,16 @@
   }
 }
 
+.container {
+  &.grid-xl {
+    .row {
+      .column.col-6{
+        background-color: red;
+      }
+    }
+  }
+
+}
 // Responsive breakpoint system
 .show-xs,
 .show-sm,
@@ -39,7 +49,7 @@
 }
 
 // Responsive grid system
-.columns {
+.row {
   display: flex;
   flex-wrap: wrap;
   margin-left: -$layout-spacing;
