pushing it to i workflow

--- a/app/root/layout3.njk
+++ b/app/root/layout3.njk
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="src/assets/css/spectre.min.css">
   <link rel="stylesheet" href="src/assets/css/spectre-exp.min.css">
 </head>
-<body>
+<body class="{{ body_class }}">
   {# {% include "partials/header/header.njk" %}
   {% include "partials/navigation/navigation.njk" %} #}
 <div class="docs-container off-canvas off-canvas-sidebar-show">
