--- a/src/assets/scss/3-layout/_navbar.scss
+++ b/src/assets/scss/3-layout/_navbar.scss
@@ -26,3 +26,124 @@
     text-decoration: none;
   }
 }
+// Navbar
+.navbar {
+	background-color: $dark-color;
+	align-items: stretch;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+
+	&__section {
+		align-items: center;
+		display: flex;
+		flex: 1 0 0;
+
+		&:not(:first-child):last-child {
+			justify-content: flex-end;
+		}
+	}
+
+	&__center {
+		align-items: center;
+		display: flex;
+		flex: 0 0 auto;
+	}
+	@media screen and (max-width : 800px){
+		&__section {
+			align-items: center;
+			display: flex;
+			flex: 1 0 0;
+
+			&:not(:first-child):last-child {
+				justify-content: flex-end;
+			}
+		}
+
+		&__center {
+			display: none;
+			justify-content: flex-end;
+			align-items: center;
+			display: flex;
+			flex: 0 0 auto;
+		}
+	}
+}
+.mobile-menu {
+	display: block;
+	width: 100%;
+	line-height: 1.6em;
+	font-weight: 400;
+	text-align: center;
+	margin: 0 auto;
+
+	ul {
+		list-style-type: none;
+		margin: 0 auto;
+		padding-left: 0;
+		text-align: center;
+		width: 100%;
+		background: $dark-color;
+	}
+
+ li {
+		display: inline-block;
+	}
+
+	li a {
+		display: block;
+		min-width: 100px;
+		text-align: center;
+		color: $secondary-color;
+		background: $dark-color;
+		text-decoration: none;
+		margin-left: -5px;
+		padding: 10px 0;
+		transition: all 0.4s ease 0s;
+	}
+
+	li:hover a {
+		color: $dark-color;
+		background-color: $secondary-color;
+	}
+
+	&__show-menu {
+		text-decoration: none;
+		text-align: center;
+		padding: 10px 15px;
+		display: none;
+		cursor: pointer;
+		text-transform: uppercase;
+	}
+
+	input[type=checkbox]{
+		display: none;
+	}
+
+	input[type=checkbox]:checked ~ .mobile-menu__menu {
+		display: block;
+	}
+
+/*Responsive Styles*/
+
+@media screen and (max-width : 800px){
+	ul {
+		background: $secondary-color;
+		position: static;
+		display: none;
+		width: 40%;
+	}
+
+	li {
+		margin-bottom: 1px;
+	}
+
+	ul li, li a {
+		width: 100%;
+	}
+
+	&__show-menu {
+		display: block;
+	}
+}
+}
