pushing the grid further

--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -6,7 +6,7 @@
   <input type="checkbox" id="mobile-menu__show-menu">
   <ul class="mobile-menu__menu">
     <li>
-     <a href="/" class="nav-home">Markus Morley</a>
+     <a href="/" class="nav-home active">Markus Morley</a>
     </li>
     <li>
       <a href="/blog.html" class="nav-blog">Blog</a>
