--- a/app/root/layout copy.njk
+++ b/app/root/layout copy.njk
@@ -10,15 +10,27 @@
 
 </head>
 <body>
-  <div class="container container-xl">
+  <div class="container grid-xl">
     {# {% include "./template-parts/header.njk" %} #}
-    {# {% include "./template-parts/nav.njk" %} #}
+    {% include "./template-parts/nav.njk" %}
   </div>
 
-    {% block content %}
-    {% endblock %}
+  <div class="container grid-lg">
+    <div class="row">
+      <div class="column">
+        {% block content %}
+        {% endblock %}
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        {% block content2 %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
 
-  <div class="container container-lg">
+  <div class="container grid-lg">
     {% include "./template-parts/footer.njk" %}
   </div>
 
