--- a/src/assets/scss/9x-customize/_about.scss
+++ b/src/assets/scss/9x-customize/_about.scss
@@ -1,10 +1,30 @@
 .about {
 	h1, p {
 		padding: 0.4em;
-		background-color: $dark-color;
+		// background-color: $dark-color;
 	}
 	h1 {
+		font-size: 8rem;
 		color: $primary-color;
 		text-decoration: none;
 	}
+}
+
+
+.docs-block {
+    border-radius: .1rem;
+    padding: .4rem;
+}
+
+.bg-primary {
+    // background: #5755d9!important;
+    color: #fff;
+}
+
+.text-secondary {
+    color: #e5e5f9!important;
+}
+ .docs-demo {
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 }
