--- a/app/root/template-parts/nav.njk
+++ b/app/root/template-parts/nav.njk
@@ -1,24 +1,543 @@
-<!-- mobile-menu Fullwidth no container wrap-->
-<nav class="mobile-menu" id="home-link">
-  <label for="mobile-menu__show-menu" class="mobile-menu__show-menu">
-    <i class="icon text-dark icon-menu"></i>
-  </label>
-  <input type="checkbox" id="mobile-menu__show-menu">
-  <ul class="mobile-menu__menu">
-    <li>
-     <a href="/" class="nav-home active">Markus Morley</a>
-    </li>
-    <li>
-      <a href="/blog.html" class="nav-blog">Blog</a>
-    </li>
-    <li>
-      <a href="/about.html" class="nav-about">About</a>
-    </li>
-    <li>
-     <a href="/portfolio.html" class="nav-portfolio">Portfolio</a>
-    </li>
-    <li>
-     <a href="/resources.html" class="nav-portfolio">Resources</a>
-    </li>
-  </ul>
-</nav>
+	<header class="header header--opaque">
+
+	  <div class="header__overlay"></div>
+
+	  <div class="header__links">
+	    <div class="row">
+	      <div class="column">
+
+	        <div class="header__links_inner">
+
+	          <a href="/blog.html" class="header__link header__link--solo">
+
+	            Link Label
+	          </a>
+
+	          <a href="#" class="header__link header__link--solo">
+
+	            Link Label
+	          </a>
+
+	          <a href="#" class="header__link header__link--solo">
+
+	            Link Label
+	          </a>
+
+	          <a href="#" class="header__link ">
+
+	            <img src="/images/search.svg" alt="" class="header__link_image">
+
+	            Suchen
+	          </a>
+
+	          <a href="#" class="header__link ">
+
+	            <img src="/images/globe.svg" alt="" class="header__link_image">
+
+	            English
+	          </a>
+
+	        </div>
+
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="header__main">
+	    <div class="row">
+	      <div class="column">
+
+	        <div class="header__main_inner">
+	          <a href="#" class="header__logo">
+	            <img width="180" src="/images/logo-light.svg" alt="" class="header__logo_image header__logo_image--light">
+	            <img width="180" src="/images/logo-dark.svg" alt="" class="header__logo_image header__logo_image--dark">
+	          </a>
+	          <nav class="header__items">
+
+	            <a href="#" class="header__item" data-header-menu-id="0">
+
+	              Complex
+	            </a>
+
+	            <a href="#" class="header__item" data-header-menu-id="1">
+
+	              Simple
+	            </a>
+
+	            <a href="#" class="header__item current" data-header-menu-id="2">
+
+	              Simple
+	            </a>
+
+	            <a href="#" class="header__item">
+
+	              Label
+	            </a>
+
+	            <a href="#" class="header__item">
+
+	              Label
+	            </a>
+
+	          </nav>
+	          <button class="header__burger">
+	            <div class="header__icon"></div>
+	          </button>
+	        </div>
+
+	        <div class="header__menu">
+
+
+	          <div class="header__menu_inner" data-header-menu-id="0">
+	            <div class="row">
+	              <div class="column small-3">
+	                <p class="h3 color-white spacing-large">Header</p>
+	                <a href="#" class="button">Button</a>
+	              </div>
+
+	              <div class="column small-9">
+	                <div class="header__masonry">
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Veniam nisi deserunt adipisicing enim</span>
+	                  </a>
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Non esse laborum</span>
+	                  </a>
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Cillum laborum</span>
+	                  </a>
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Non esse laborum</span>
+	                  </a>
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Veniam nisi deserunt adipisicing enim</span>
+	                  </a>
+
+	                  <a href="#" class="header__subitem">
+	                    <span class="header__arrow">›</span>
+	                    <span>Cillum laborum</span>
+	                  </a>
+
+	                </div>
+	              </div>
+
+	            </div>
+	          </div>
+
+
+
+	          <div class="header__menu_inner" data-header-menu-id="1">
+	            <div class="row">
+	              <div class="column small-3">
+	                <p class="h3 color-white spacing-large">Header</p>
+	                <a href="#" class="button">Button</a>
+	              </div>
+
+	              <div class="column small-4">
+
+	                <a href="#anchor" class="header__subitem" data-header-description-id="0">
+	                  <span class="header__arrow">›</span>
+	                  <span>Veniam nisi deserunt adipisicing enim</span>
+	                </a>
+
+	                <a href="#" class="header__subitem" data-header-description-id="1">
+	                  <span class="header__arrow">›</span>
+	                  <span>Non esse laborum</span>
+	                </a>
+
+	                <a href="#" class="header__subitem active" data-header-description-id="2">
+	                  <span class="header__arrow">›</span>
+	                  <span>Cillum laborum</span>
+	                </a>
+
+	              </div>
+	              <div class="column small-5">
+
+	                <div class="header__description rte" data-header-description-id="0">
+	                  <p>Ea veniam reprehenderit <a href="#">lorem</a> do do qui reprehenderit aliqua eu in laboris
+	                    consectetur tempor. Ea veniam reprehenderit officia do do qui reprehenderit aliqua eu in laboris
+	                    consectetur tempor.</p>
+	                </div>
+
+	                <div class="header__description rte" data-header-description-id="1">
+	                  <p>Veniam reprehenderit officia do do qui <a href="#">lorem</a> aliqua eu in laboris consectetur
+	                    tempor.</p>
+	                </div>
+
+	                <div class="header__description rte visible" data-header-description-id="2">
+	                  <p>Reprehenderit officia do do qui reprehenderit aliqua eu in laboris consectetur tempor.</p>
+	                </div>
+
+	              </div>
+
+	            </div>
+	          </div>
+
+
+
+	          <div class="header__menu_inner" data-header-menu-id="2">
+	            <div class="row">
+	              <div class="column small-3">
+	                <p class="h3 color-white spacing-large">Header</p>
+	                <a href="#" class="button">Button</a>
+	              </div>
+
+	              <div class="column small-4">
+
+	                <a href="#anchor" class="header__subitem active" data-header-description-id="0">
+	                  <span class="header__arrow">›</span>
+	                  <span>Veniam nisi deserunt adipisicing enim</span>
+	                </a>
+
+	                <a href="#" class="header__subitem " data-header-description-id="1">
+	                  <span class="header__arrow">›</span>
+	                  <span>Non esse laborum</span>
+	                </a>
+
+	                <a href="#" class="header__subitem " data-header-description-id="2">
+	                  <span class="header__arrow">›</span>
+	                  <span>Cillum laborum</span>
+	                </a>
+
+	              </div>
+	              <div class="column small-5">
+
+	                <div class="header__description rte visible" data-header-description-id="0">
+	                  <p>Ea veniam reprehenderit <a href="#">lorem</a> do do qui reprehenderit aliqua eu in laboris
+	                    consectetur tempor. Ea veniam reprehenderit officia do do qui reprehenderit aliqua eu in laboris
+	                    consectetur tempor.</p>
+	                </div>
+
+	                <div class="header__description rte " data-header-description-id="1">
+	                  <p>Veniam reprehenderit officia do do qui <a href="#">lorem</a> aliqua eu in laboris consectetur
+	                    tempor.</p>
+	                </div>
+
+	                <div class="header__description rte " data-header-description-id="2">
+	                  <p>Reprehenderit officia do do qui reprehenderit aliqua eu in laboris consectetur tempor.</p>
+	                </div>
+
+	              </div>
+
+	            </div>
+	          </div>
+
+
+
+
+
+
+	        </div>
+
+	      </div>
+	    </div>
+	  </div>
+
+	</header>
+
+
+	<div class="inset"></div>
+
+
+	<div class="mobile_menu ">
+	  <ul class="mobile_items">
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Complex
+	        </a>
+
+	        <button class="mobile_items__button"></button>
+
+	      </div>
+
+	      <ul class="mobile_items ">
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Veniam nisi deserunt adipisicing enim
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Non esse laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Cillum laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Non esse laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Veniam nisi deserunt adipisicing enim
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Cillum laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+	      </ul>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Simple
+	        </a>
+
+	        <button class="mobile_items__button"></button>
+
+	      </div>
+
+	      <ul class="mobile_items ">
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#anchor" class="mobile_items__link">
+	              Veniam nisi deserunt adipisicing enim
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Non esse laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Cillum laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+	      </ul>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Simple
+	        </a>
+
+	        <button class="mobile_items__button"></button>
+
+	      </div>
+
+	      <ul class="mobile_items ">
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#anchor" class="mobile_items__link">
+	              Veniam nisi deserunt adipisicing enim
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Non esse laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+
+
+	        <li class="mobile_items__row">
+	          <div class="mobile_items__item">
+	            <a href="#" class="mobile_items__link">
+	              Cillum laborum
+	            </a>
+
+	          </div>
+
+	        </li>
+
+
+	      </ul>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Label
+	        </a>
+
+	      </div>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Label
+	        </a>
+
+	      </div>
+
+	    </li>
+
+
+	  </ul>
+	  <ul class="mobile_items visible">
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Link Label
+	        </a>
+
+	      </div>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Link Label
+	        </a>
+
+	      </div>
+
+	    </li>
+
+
+
+
+	    <li class="mobile_items__row">
+	      <div class="mobile_items__item">
+	        <a href="#" class="mobile_items__link">
+	          Link Label
+	        </a>
+
+	      </div>
+
+	    </li>
+
+
+
+
+
+
+
+
+	  </ul>
+	</div>
