--- a/src/assets/scss/3-layout/_navbar.scss
+++ b/src/assets/scss/3-layout/_navbar.scss
@@ -1,30 +1,30 @@
 // Navbar
 .navbar {
-  align-items: stretch;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	align-items: stretch;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 
-  .navbar-section {
-    align-items: center;
-    display: flex;
-    flex: 1 0 0;
+	.navbar-section {
+		align-items: center;
+		display: flex;
+		flex: 1 0 0;
 
-    &:not(:first-child):last-child {
-      justify-content: flex-end;
-    }
-  }
+		&:not(:first-child):last-child {
+			justify-content: flex-end;
+		}
+	}
 
-  .navbar-center {
-    align-items: center;
-    display: flex;
-    flex: 0 0 auto;
-  }
+	.navbar-center {
+		align-items: center;
+		display: flex;
+		flex: 0 0 auto;
+	}
 
-  .navbar-brand {
-    font-size: $font-size-lg;
-    text-decoration: none;
-  }
+	.navbar-brand {
+		font-size: $font-size-lg;
+		text-decoration: none;
+	}
 }
 
 // Navbar
@@ -50,7 +50,8 @@
 		display: flex;
 		flex: 0 0 auto;
 	}
-	@media screen and (max-width : 800px){
+
+	@media screen and (max-width : 800px) {
 		&__section {
 			align-items: center;
 			display: flex;
@@ -91,8 +92,8 @@
 	}
 
 	li {
-			display: inline-block;
-		}
+		display: inline-block;
+	}
 
 	li a {
 		display: block;
@@ -124,34 +125,393 @@
 		text-transform: uppercase;
 	}
 
-	input[type=checkbox]{
+	input[type=checkbox] {
 		display: none;
 	}
 
-	input[type=checkbox]:checked ~ .mobile-menu__menu {
+	input[type=checkbox]:checked~.mobile-menu__menu {
 		display: block;
 	}
 
-/*Responsive Styles*/
+	/*Responsive Styles*/
 
-@media screen and (max-width : 800px){
+	@media screen and (max-width : 800px) {
+		ul {
+			background: $secondary-color;
+			position: static;
+			display: none;
+			width: 40%;
+		}
+
+		li {
+			margin-bottom: 1px;
+		}
+
+		ul li,
+		li a {
+			width: 100%;
+		}
+
+		&__show-menu {
+			display: block;
+		}
+	}
+}
+
+.mega-menu {
+	position: relative;
+	background: darkgrey;
+
+	&__sub {
+		opacity: 0;
+	display: none;
+	}
+
 	ul {
-		background: $secondary-color;
-		position: static;
-		display: none;
-		width: 40%;
+		list-style: none;
 	}
 
 	li {
-		margin-bottom: 1px;
+		display: inline-block;
 	}
 
-	ul li, li a {
+	a {
+		display: block;
+		padding: 20px;
+		font-family: sans-serif;
+		font-size: 2em;
+		text-decoration: none;
+		color: grey;
+	}
+
+	a:hover {
+		background: #efefef;
+	}
+
+	li div {
+		// opacity: 0;
+		// display: none;
 		width: 100%;
+		height: auto;
+		position: absolute;
+		left: 0;
+		background: hotpink;
+		// transition:  opacity 500ms ease-in-out
 	}
 
-	&__show-menu {
+	li:hover div {
+		// opacity: 1;
+		// transition:  opacity 200ms ease-in-out
+	}
+
+	li div ul {
+		display: inline-block;
+		vertical-align: top;
+	}
+
+	li div ul li {
 		display: block;
 	}
+
+	li div ul li a {
+		font-size: 1em;
+		color: white;
+	}
 }
+.header {
+
+	$burgerBarHeight: 3px;
+	$burgerBarWidth: 38px;
+	$burgerBarMargin: 6px;
+	$duration: 0.5;
+	$timing: 0.5;
+	$headerLinksHeight: 38px;
+	$gutter: 38px;
+	$bpS: 600px;
+	$box-shadow-bottom: 0;
+	$headerMenuHeight: 200px;
+
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 3;
+
+	// Overlay ------------------------------------------------ //
+
+	&__overlay {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		opacity: 0;
+		background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, 0));
+		transition: opacity $duration $timing;
+		pointer-events: none;
+
+		&.visible {
+			opacity: 1;
+		}
+	}
+
+	// Links -------------------------------------------------- //
+
+	&__links {
+		position: relative;
+		background: color('primary');
+	}
+
+	&__links_inner {
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		height: $headerLinksHeight;
+	}
+
+	&__link {
+		display: flex;
+		align-items: center;
+		margin-left: $gutter;
+		color: color('white');
+		font-weight: 500;
+		text-decoration: none;
+		transition: opacity $duration $timing;
+
+		&--solo {
+			@media (max-width: $bpS) {
+				display: none;
+			}
+		}
+
+		&:hover {
+			opacity: .9;
+		}
+
+		&:active {
+			transition: none;
+			opacity: .6;
+		}
+	}
+
+	&__link_image {
+		display: block;
+		width: 16px;
+		height: 16px;
+		margin: 0 $gutter/4 2px 0;
+	}
+
+	// Main --------------------------------------------------- //
+
+	&__main {
+		position: relative;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: color('white');
+			opacity: 0;
+			transition: opacity $duration $timing;
+			box-shadow: $box_shadow_bottom;
+		}
+	}
+
+	&--opaque &__main,
+	&--scrolled &__main {
+		&::before {
+			opacity: 1;
+		}
+	}
+
+	&__main_inner {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		height: calc(#{ $headerMenuHeight } + 1em);
+		transition: height $duration $timing;
+	}
+
+	&--opaque &__main_inner,
+	&--scrolled &__main_inner {
+		height: $headerMenuHeight;
+	}
+
+	// Logo --------------------------------------------------- //
+
+	&__logo {
+		position: relative;
+	}
+
+	&__logo_image {
+		display: block;
+		margin: 0;
+		opacity: 0;
+		transition: opacity $duration $timing;
+
+		&--light {
+			opacity: 1;
+		}
+
+		&--dark {
+			position: absolute;
+			top: 0;
+			left: 0;
+			opacity: 0;
+		}
+	}
+
+	&--opaque &__logo_image--light,
+	&--scrolled &__logo_image--light {
+		opacity: 0;
+	}
+
+	&--opaque &__logo_image--dark,
+	&--scrolled &__logo_image--dark {
+		opacity: 1;
+	}
+
+	// Items --------------------------------------------------- //
+
+	&__items {
+		display: flex;
+
+		@media (max-width: $bpS) {
+			display: none;
+		}
+	}
+
+	&__item {
+		position: relative;
+		display: block;
+		padding: 0 $gutter/2;
+		color: color('white');
+		font-size: 1.4em;
+		text-decoration: none;
+		transition: opacity $duration $timing;
+
+		&:last-child {
+			padding-right: 0;
+		}
+
+		&.inactive:not(.active) {
+			opacity: .6;
+		}
+
+		&.current::after {
+			content: '';
+			position: absolute;
+			left: $gutter/2;
+			right: $gutter/2;
+			bottom: 0;
+			height: 2px;
+			background: color('secondary');
+		}
+	}
+
+	&--opaque &__item,
+	&--scrolled &__item {
+		color: color('primary');
+	}
+
+	&__item_image {
+		display: block;
+		margin: 0;
+	}
+
+	// Burger ---------------------------------------------------- //
+
+	&__burger {
+		// @extend %button;
+
+		display: none;
+
+		@media (max-width: $bpS) {
+			display: block;
+		}
+	}
+
+	&__icon {
+		// @include burger($burgerBarWidth, $burgerBarHeight, $burgerBarMargin, color('white'));
+
+		&.active {
+			// @include burger-to-cross();
+		}
+	}
+
+	&--opaque &__icon,
+	&--scrolled &__icon {
+		// @include burger($burgerBarWidth, $burgerBarHeight, $burgerBarMargin, color('primary'));
+
+		&.active {
+			// @include burger-to-cross();
+		}
+	}
+
+	// Menu ---------------------------------------------------- //
+
+	&__menu {
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		padding: $gutter*2;
+		// background: $gradient_primary;
+		background: blue;
+		pointer-events: none;
+		opacity: 0;
+		transform: translateY(10px);
+		transition-property: opacity, transform;
+		transition-duration: $duration;
+		transition-timing-function: $timing;
+
+		&.visible {
+			pointer-events: all;
+			opacity: 1;
+			transform: none;
+		}
+	}
+
+	&__menu_inner {
+		display: none;
+
+		&.visible {
+			display: block;
+		}
+	}
+
+	&__subitem {
+		display: flex;
+		padding: $gutter/6 0;
+		color: color('white');
+		font-size: 1.4em;
+		line-height: 1.3;
+		text-decoration: none;
+		transition: transform $duration $timing;
+
+		&.active,
+		&:hover {
+			font-weight: 500;
+			transform: translateX(10px);
+		}
+	}
+
+	&__arrow {
+		margin-right: $gutter/4;
+	}
+
+	&__description {
+		display: none;
+		padding: $gutter/6 0;
+		color: color('white');
+		font-size: 1.2em;
+
+		&.visible {
+			display: block;
+		}
+	}
+
 }
