--- a/src/assets/scss/5-components/_toasts.scss
+++ b/src/assets/scss/5-components/_toasts.scss
@@ -6,6 +6,7 @@
   color: $light-color;
   display: block;
   padding: $layout-spacing;
+  margin-bottom:  $layout-spacing;
   width: 100%;
 
   &.toast-primary {
@@ -27,7 +28,7 @@
   a {
     color: $light-color;
     text-decoration: underline;
-    
+
     &:focus,
     &:hover,
     &:active,
