--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -1,4 +1,6 @@
 {% set body_class = "home" %}
+{% set site_class = "site" %}
+{% set page = "page.html" %}
 {% extends "layout.njk" %}
 
 {% block content %}
