--- a/src/assets/scss/2-base/_typography.scss
+++ b/src/assets/scss/2-base/_typography.scss
@@ -1,5 +1,11 @@
 // Typography
 // Headings
+
+  .vita {
+    margin-top: 2em;
+    font-size: 12rem;
+  }
+
 h1,
 h2,
 h3,
@@ -23,6 +29,8 @@ h6 {
 h1,
 .h1 {
   font-size: 2rem;
+
+
 }
 h2,
 .h2 {
