--- a/src/assets/scss/9x-customize/_9x-customize.scss
+++ b/src/assets/scss/9x-customize/_9x-customize.scss
@@ -7,3 +7,6 @@
 @import "hero";
 @import "featured";
 @import "paralax";
+@import "paralax_about";
+@import "paralax_photography";
+@import "paralax_paintinks";
