added photography sectopn

--- a/src/assets/scss/9x-customize/_9x-customize.scss
+++ b/src/assets/scss/9x-customize/_9x-customize.scss
@@ -9,4 +9,7 @@
 @import "paralax";
 @import "paralax_about";
 @import "paralax_photography";
+@import "paralax_photography_bw";
+@import "paralax_photography_blacker";
+@import "paralax_photography_portrait";
 @import "paralax_paintinks";
