--- a/src/assets/scss/9x-customize/_paralax_photography_blacker.scss
+++ b/src/assets/scss/9x-customize/_paralax_photography_blacker.scss
@@ -1,4 +1,4 @@
-.paralax_photography_bw {
+.paralax_photography_blacker {
 height: 41000px;
   /* foreground (balloons/landscape)*/
   #parallax-bg-1 {
