--- a/src/assets/scss/spectre-icons.scss
+++ b/src/assets/scss/spectre-icons.scss
@@ -1,7 +1,7 @@
 // Variables and mixins
 @import "1-helpers/1-helpers";
 
-/*! Spectre.css Icons v#{$version} | MIT License | github.com/picturepan2/spectre */
+// /*! Spectre.css Icons v#{$version} | MIT License | github.com/picturepan2/spectre */
 // Icons
 // Helpers Variables and mixins
 @import "9-icons/9-icons";
