--- a/src/assets/scss/2-base/_normalize.scss
+++ b/src/assets/scss/2-base/_normalize.scss
@@ -359,47 +359,47 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
+// [type="number"]::-webkit-inner-spin-button,
+// [type="number"]::-webkit-outer-spin-button {
+//   height: auto;
+// }
 
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
+// /**
+//  * 1. Correct the odd appearance in Chrome and Safari.
+//  * 2. Correct the outline style in Safari.
+//  */
 
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
+// [type="search"] {
+//   -webkit-appearance: textfield; /* 1 */
+//   outline-offset: -2px; /* 2 */
+// }
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+// [type="search"]::-webkit-search-cancel-button,
+// [type="search"]::-webkit-search-decoration {
+//   -webkit-appearance: none;
+// }
 
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
+// /**
+//  * 1. Correct the inability to style clickable types in iOS and Safari.
+//  * 2. Change font properties to `inherit` in Safari.
+//  */
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
-/* Interactive
-   ========================================================================== */
+// /* Interactive
+//    ========================================================================== */
 
-/*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- */
+// /*
+//  * Add the correct display in IE 9-.
+//  * 1. Add the correct display in Edge, IE, and Firefox.
+//  */
 
 details, /* 1 */
 menu {
