--- a/src/assets/scss/9x-customize/_paralax_photography_portrait.scss
+++ b/src/assets/scss/9x-customize/_paralax_photography_portrait.scss
@@ -1,11 +1,11 @@
-.paralax_photography_bw {
-height: 41000px;
+.paralax_photography_portrait {
+height: 15000px;
   /* foreground (balloons/landscape)*/
   #parallax-bg-1 {
     // pointer-events: none;
     position: fixed;
     width: 1200px;
-    top: 300;
+    top: 0;
     left: 50%;
     margin-left: -600px;
     z-index: 1;
@@ -25,7 +25,7 @@ height: 41000px;
     // pointer-events: none;
     position: fixed;
     width: 960px;
-    top: 300;
+    top: 0;
     left: 50%;
     margin-left: -470px;
     z-index: 3;
@@ -38,19 +38,34 @@ height: 41000px;
     display: block;
     overflow: hidden;
   }
+
   #bg-3-1 {
-    pointer-events: none;
-    // background: url("../img/paralax/blink_1.png");
-    background: url("../img/photography/black/Black_001.jpg");
+    // pointer-events: none;
+    background: url("../img/photography/portrait/Portrait_012.jpg");
     width: 629px;
     height: 757px;
-    top: 100px;
+    top: 800px;
+
+    a {
+      display: flex;
+      height: 100%;
+      color: white;
+      transition: all 1s cubic-bezier(0.47, 0, 0.745, 0.715);
+
+      &:hover{
+        font-size: 8em;
+        color: black;
+        background-color: yellow ;
+        opacity: 1;
+      }
+    }
   }
+
   #bg-3-2 {
     pointer-events: none;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon2.png");
     // background: url("../img/paralax_about/pyramidpsd.png");
-    background: url("../img/photography/black/Black_002.jpg");
+    background: url("../img/photography/portrait/Portrait_026.jpg");
     width: 803px;
     height: 583px;
     top: 1050px;
@@ -59,7 +74,7 @@ height: 41000px;
   #bg-3-3 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon3.png");
       // background: url("../img/paralax_about/markus_tag.png");
-      background: url("../img/photography/black/Black_003.jpg");
+      background: url("../img/photography/portrait/Portrait_033.jpg");
     width: 546px;
     height: 713px;
     top: 1800px;
@@ -69,8 +84,8 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/ground.png");
     // background: url("../img/paralax/blink_1.png");
     // background: url("../img/paralax_about/metal_slug_002.png");
-    // background: url("../img/photography/black/Black_004.jpg");
-    background: url("../img/photography/black/agifcolossalsphere2.gif");
+    // background: url("../img/photography/portrait/Portrait_044.jpg");
+    background: url("../img/photography/portrait/Portrait_044.jpg");
     width: 804px;
     height: 484px;
     top: 2800px;
@@ -78,23 +93,23 @@ height: 41000px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
   #bg-3-5 {
     // pointer-events: none;
     // background: url("../img/paralax/blink_1.png");
-    background: url("../img/photography/black/Black_001.jpg");
+    background: url("../img/photography/portrait/Portrait_023.jpg");
     width: 629px;
     height: 757px;
     top: 2100px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
@@ -102,7 +117,7 @@ height: 41000px;
     // pointer-events: none;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon2.png");
     // background: url("../img/paralax_about/pyramidpsd.png");
-    background: url("../img/photography/black/Black_002.jpg");
+    background: url("../img/photography/portrait/Portrait_014.jpg");
     width: 803px;
     height: 583px;
     top: 3050px;
@@ -110,15 +125,15 @@ height: 41000px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
   #bg-3-7 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/balloon3.png");
       // background: url("../img/paralax_about/markus_tag.png");
-      background: url("../img/photography/black/Black_003.jpg");
+      background: url("../img/photography/portrait/Portrait_044.jpg");
     width: 546px;
     height: 713px;
     top: 4800px;
@@ -126,8 +141,8 @@ height: 41000px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
@@ -135,8 +150,8 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/ground.png");
     // background: url("../img/paralax/blink_1.png");
     // background: url("../img/paralax_about/metal_slug_002.png");
-    // background: url("../img/photography/black/Black_004.jpg");
-    background: url("../img/photography/black/agifcolossalsphere2.gif");
+    // background: url("../img/photography/portrait/Portrait_044.jpg");
+    background: url("../img/photography/portrait/Portrait_034.jpg");
     width: 1104px;
     height: 684px;
     top: 5800px;
@@ -144,8 +159,8 @@ height: 41000px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
@@ -153,7 +168,7 @@ height: 41000px;
   #parallax-bg-2 div {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg1.png");
     // background: url("../img/paralax/cloud_small_2.png");
-    // background: url("../img/photography/black/Black_005.jpg");
+    // background: url("../img/photography/portrait/Portrait_044.jpg");
     background-repeat: no-repeat;
     position: absolute;
     display: block;
@@ -163,90 +178,90 @@ height: 41000px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
 
   #bg-2-1 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_035.jpg");
     top: 100px;
     left: -310px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
   #bg-2-2 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_010.jpg");
     top: 270px;
     right: -70px;
   }
   #bg-2-3 {
-    background: url("../img/photography/black/Black_015.jpg");
+    background: url("../img/photography/portrait/Portrait_018.jpg");
     top: 870px;
     left: -300px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
   #bg-2-4 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_027.jpg");
     top: 1120px;
     right: -130px;
   }
   #bg-2-5 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_022.jpg");
     top: 1620px;
     left: 140px;
   }
   #bg-2-6 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_026.jpg");
     top: 720px;
     left: 340px;
     transition: all 1s ease-out;
     &:hover{
       transform: scale(1.4);
-      border-bottom: 4px solid yellow ;
-      border-right: 14px solid yellow ;
+      border-bottom: 4px solid black ;
+      border-right: 14px solid black ;
       z-index: 400;
     }
   }
   #bg-2-7 {
-    background: url("../img/photography/black/Black_022.jpg");
+    background: url("../img/photography/portrait/Portrait_003.jpg");
     top: 3100px;
     left: -310px;
   }
   #bg-2-8 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_005.jpg");
     top: 3270px;
     right: -70px;
   }
   #bg-2-9 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_009.jpg");
     top: 3870px;
     left: -300px;
   }
   #bg-2-10 {
-    background: url("../img/photography/black/Black_025.jpg");
+    background: url("../img/photography/portrait/Portrait_037.jpg");
     top: 4120px;
     right: -130px;
   }
   #bg-2-11 {
-    background: url("../img/photography/black/Black_005.jpg");
+    background: url("../img/photography/portrait/Portrait_024.jpg");
     top: 4620px;
     left: 140px;
   }
   #bg-2-12 {
-    background: url("../img/photography/black/Black_021.jpg");
+    background: url("../img/photography/portrait/Portrait_014.jpg");
     top: 4720px;
     left: 340px;
   }
@@ -263,7 +278,7 @@ height: 41000px;
 
   #bg-1-1 {
     // background: url("../img/paralax_about/morley_portrait-tags-tag.png");
-    background: url("../img/photography/black/Black_006.jpg");
+    background: url("../img/photography/portrait/Portrait_029.jpg");
     width: 800px;
     top: 600px;
     left: 15px;
@@ -271,20 +286,20 @@ height: 41000px;
   #bg-1-2 {
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_2.png");
-    background: url("../img/photography/black/Black_007.jpg");
+    background: url("../img/photography/portrait/Portrait_023.jpg");
     top: 420px;
     left: 0px;
   }
   #bg-1-3 {
     // background: url("../img/paralax/cloud_small_1.png");
-    background: url("../img/photography/black/Black_008.jpg");
+    background: url("../img/photography/portrait/Portrait_045.jpg");
     top: 850px;
     right: -290px;
   }
   #bg-1-4 {
     // background: url("../img/paralax/Unbenannt-2-small.png");
     // background: url("../img/paralax_about/perspective.png");
-    background: url("../img/photography/black/Black_009.jpg");
+    background: url("../img/photography/portrait/Portrait_025.jpg");
     top: 1350px;
     width: 803px;
     height: 583px;
@@ -294,7 +309,7 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/black/Black_010.jpg");
+    background: url("../img/photography/portrait/Portrait_008.jpg");
     width: 1403px;
     height: 583px;
     top: 1200px;
@@ -304,7 +319,7 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/black/Black_011.jpg");
+    background: url("../img/photography/portrait/Portrait_001.jpg");
     width: 1403px;
     height: 583px;
     top: 1700px;
@@ -314,7 +329,7 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/black/Black_012.jpg");
+    background: url("../img/photography/portrait/Portrait_021.jpg");
     width: 1403px;
     height: 583px;
     top: 2000px;
@@ -324,7 +339,7 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/black/Black_013.jpg");
+    background: url("../img/photography/portrait/Portrait_017.jpg");
     width: 1403px;
     height: 583px;
     top: 1200px;
@@ -334,7 +349,7 @@ height: 41000px;
     // background: url("http://schulzmarcel.de/x/drafts/parallax/img/cloud-lg2.png");
     // background: url("../img/paralax/cloud_small_1.png");
     // background: url("../img/paralax/abold_1.png");
-    background: url("../img/photography/black/Black_014.jpg");
+    background: url("../img/photography/portrait/Portrait_044.jpg");
     width: 1403px;
     height: 583px;
     top: 2900px;
